k8s/k8-core/nginx/daemonset.yml
kind: DaemonSet
apiVersion: apps/v1
metadata: 
  name: nginx-daemonsets
  namespace: nginx
spec: 
  selector:
    matchLabels: 
      app: nginx  
  
  template:
    metadata:
      # name: nginx-dep-pod
      # name: nginx-rep-pod
      # name: nginx-dmn-pod
      labels:
        app: nginx
    
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        resources: 
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
