k8s/k8-core/nginx/service.yml
apiVersion: v1
kind: Service 
metadata:
  name: nginx-service
  namespace: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
